k8-resources/nginx/pod.yaml
apiVersion: v1
kind: Pod
metadata:
  name: nginx-2
  labels:
    name: nginx
spec:
  containers:
  - name: nginx
    image: nginx
    ports:
    - containerPort: 443
